@@ -3,7 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.0.0-rc5
-  * SCHEMA-262. KijiPager and KijiRowScanner throw unchecked KijiIOException. 
+  * SCHEMA-239. KijiTable.close() is deprecated, use KijiTable.release().
+  * SCHEMA-262. KijiPager and KijiRowScanner throw unchecked KijiIOException.
   * SCHEMA-173. Improves CLI parsing of EntityIds.  Adds abstract
       toShellString() to EntityId which returns a string which can be
       copied into CLI.
